@@ -707,3 +707,5 @@ Week of Sept 10,2007
 Pre3 released
 
 October 11, 2007 Pre 4 (or possibly 3.2-001) opened.
+
+October 12, 2007 - Make multicolored monster understand Gamman deluxe spectra.
